# sts-stat-viewer

./: Justfile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
openapi/: api.yaml
src/: app.css
src-tauri/: Cargo.toml  launch-with-gpu.sh  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: handlers.rs  mod.rs  sts_handlers.rs  types.rs
src-tauri/src/sts/: mod.rs
src/lib/api/: client.test.ts  client.ts  index.ts  schema.d.ts  sts-client.ts
src/lib/components/: AddGraphModal.svelte  EditGraphModal.svelte  GraphCard.svelte  UpdateManager.svelte  index.ts
src/lib/plots/: BarChart.svelte  BoxPlot.svelte  DensityPlot.svelte  DotPlot.svelte  Heatmap.svelte  Histogram.svelte  ItemTable.svelte  LineChart.svelte  RegressionPlot.svelte  ScatterPlot.svelte  StackedArea.svelte  WaffleChart.svelte  index.ts  types.ts
src/lib/stores/: graphs.ts  index.ts  settings.ts  theme.ts
src/lib/utils/: index.ts  resize-observer.ts
src/routes/: +layout.svelte  +page.svelte
tests/: app.spec.ts
