[package]
name = "sts-stat-viewer"
undefined
description = "Slay the Spire Statistics Viewer - Analyze your runs"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sts_stat_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# API server dependencies
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI documentation with utoipa
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Directory traversal for finding run files
walkdir = "2"
dirs = "6"

# Testing
[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio-test = "0.4"

